forgot to commit

--- a/src/scenes/HomePage/package.json
+++ b/src/scenes/HomePage/package.json
@@ -1,12 +1,13 @@
 {
   "name": "home-page",
+  "sideEffects": "false",
   "version": "0.0.0",
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@faker-js/faker": "^7.1.0",
     "google-libphonenumber": "^3.2.27",
     "graphql": "^16.5.0",
-    "lodash": "4.17.20",
+    "lodash": "^4.17.20",
     "moment": "^2.29.3",
     "react-datepicker": "^4.8.0",
     "react-hook-form": "^7.31.3"
