--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "dayjs": "^1.11.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-router-dom": "^6.3.0",
